<resources>
    <string name="app_name">My Application</string>
    <string name="menu">menu</string>
    <string name="prohome">ProHome</string>
    <string name="heavy_rain">Heavy Rain</string>
    <string name="tonight">Tonight</string>
    <string name="_27">27°</string>
    <string name="feels_like_32">Feels Like 32°</string>
    <string name="energy">Energy</string>
    <string name="_16_4_kwh">16.4 kwh</string>
    <string name="_3_device_turn_on">3 Device Turn on</string>
    <string name="devices">Devices </string>
    <string name="_25">(25)</string>
</resources>